@@ -1,0 +1,107 @@
+﻿#region Copyright
+
+///////////////////////////////////////////////////////////////////////////////
+//  File: ReadableBitmapDataExtensions.cs
+///////////////////////////////////////////////////////////////////////////////
+//  Copyright (C) KGy SOFT, 2005-2022 - All Rights Reserved
+//
+//  You should have received a copy of the LICENSE file at the top-level
+//  directory of this distribution.
+//
+//  Please refer to the LICENSE file if you want to use this source code.
+///////////////////////////////////////////////////////////////////////////////
+
+#endregion
+
+#region Usings
+
+using System;
+using System.Drawing;
+using System.Threading.Tasks;
+
+using KGySoft.Drawing.Imaging;
+using KGySoft.Threading;
+
+using Microsoft.UI.Xaml.Media.Imaging;
+
+#endregion
+
+namespace KGySoft.Drawing.WinUI
+{
+    /// <summary>
+    /// Provides extension methods for the <see cref="IReadableBitmapData"/> type.
+    /// </summary>
+    public static class ReadableBitmapDataExtensions
+    {
+        #region Methods
+
+        #region Public Methods
+
+        /// <summary>
+        /// Converts the specified <paramref name="source"/> to a <see cref="WriteableBitmap"/>.
+        /// <br/>See the <strong>Remarks</strong> section for details.
+        /// </summary>
+        /// <param name="source">The source <see cref="IReadWriteBitmapData"/> instance to covert.</param>
+        /// <returns>A <see cref="WriteableBitmap"/> instance that has the same content as the specified <paramref name="source"/>.</returns>
+        /// <exception cref="ArgumentNullException"><paramref name="source"/> is <see langword="null"/>.</exception>
+        /// <remarks>
+        /// <note>This method adjusts the degree of parallelization automatically, blocks the caller, and does not support cancellation or reporting progress.
+        /// Use the <see cref="ToWriteableBitmapAsync">ToWriteableBitmapAsync</see> for asynchronous call and to adjust parallelization, set up cancellation and for reporting progress.</note>
+        /// </remarks>
+        public static WriteableBitmap ToWriteableBitmap(this IReadableBitmapData source)
+        {
+            ValidateArguments(source);
+            return DoConvertToWriteableBitmap(AsyncHelper.DefaultContext, source)!;
+        }
+
+        /// <summary>
+        /// Converts the specified <paramref name="source"/> to a <see cref="WriteableBitmap"/> asynchronously.
+        /// <br/>See the <strong>Remarks</strong> section for details.
+        /// </summary>
+        /// <param name="source">The source <see cref="IReadableBitmapData"/> instance to covert.</param>
+        /// <param name="asyncConfig">The configuration of the asynchronous operation such as parallelization, cancellation, reporting progress, etc.
+        /// When <a href="https://docs.kgysoft.net/corelibraries/?topic=html/P_KGySoft_Threading_AsyncConfigBase_Progress.htm" target="_blank">Progress</a> is set in this parameter,
+        /// then this library always passes a <see cref="DrawingOperation"/> instance to the generic methods of
+        /// the <a href="https://docs.kgysoft.net/corelibraries/?topic=html/T_KGySoft_Threading_IAsyncProgress.htm" target="_blank">IAsyncProgress</a> interface. This parameter is optional.
+        /// <br/>Default value: <see langword="null"/>.</param>
+        /// <returns>A task that represents the asynchronous operation. Its result is a <see cref="WriteableBitmap"/> instance that has the same content as the specified <paramref name="source"/>,
+        /// or <see langword="null"/>, if the operation was canceled and the <a href="https://docs.kgysoft.net/corelibraries/?topic=html/P_KGySoft_Threading_AsyncConfigBase_ThrowIfCanceled.htm" target="_blank">ThrowIfCanceled</a>property of the <paramref name="asyncConfig"/> parameter was <see langword="false"/>.</returns>
+        /// <exception cref="ArgumentNullException"><paramref name="source"/> is <see langword="null"/>.</exception>
+        /// <remarks>
+        /// <para>This method is not a blocking call even if the <a href="https://docs.kgysoft.net/corelibraries/?topic=html/P_KGySoft_Threading_AsyncConfigBase_MaxDegreeOfParallelism.htm" target="_blank">MaxDegreeOfParallelism</a> property of the <paramref name="asyncConfig"/> parameter is 1.</para>
+        /// <note type="tip">See the <strong>Remarks</strong> section of the <see cref="ToWriteableBitmap">ToWriteableBitmap</see> method for more details.</note>
+        /// </remarks>
+        public static Task<WriteableBitmap?> ToWriteableBitmapAsync(this IReadableBitmapData source, TaskConfig? asyncConfig = null)
+        {
+            ValidateArguments(source);
+            return AsyncHelper.DoOperationAsync(ctx => DoConvertToWriteableBitmap(ctx, source), asyncConfig);
+        }
+
+        #endregion
+
+        #region Private Methods
+
+        private static void ValidateArguments(IReadableBitmapData source)
+        {
+            if (source == null)
+                throw new ArgumentNullException(nameof(source), PublicResources.ArgumentNull);
+            if (source.Width <= 0)
+                throw new ArgumentException(PublicResources.PropertyMustBeGreaterThan(nameof(source.Width), 0), nameof(source));
+            if (source.Height <= 0)
+                throw new ArgumentException(PublicResources.PropertyMustBeGreaterThan(nameof(source.Height), 0), nameof(source));
+        }
+
+        private static WriteableBitmap? DoConvertToWriteableBitmap(IAsyncContext context, IReadableBitmapData source)
+        {
+            if (context.IsCancellationRequested)
+                return null;
+            var result = new WriteableBitmap(source.Width, source.Height);
+            using IWritableBitmapData target = result.GetWritableBitmapData();
+            return source.CopyTo(target, context, new Rectangle(Point.Empty, source.Size), Point.Empty) ? result : null;
+        }
+
+        #endregion
+
+        #endregion
+    }
+}
